# flip-man

./: CMakeLists.txt  README.md
src/: main.cpp
